tests/baselines/reference/semicolonsInModuleDeclarations.errors.txt
semicolonsInModuleDeclarations.ts(2,27): error TS1036: Statements are not allowed in ambient contexts.


==== semicolonsInModuleDeclarations.ts (1 errors) ====
    declare module ambiModule {
       export interface i1 { };
                              ~
!!! error TS1036: Statements are not allowed in ambient contexts.
       export interface i2 { }
    }
    
    var n1: ambiModule.i1;
    var n2: ambiModule.i2;
    